remove npm from yarn release

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@bmackio/pkg-yarn",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
-    "release": "yarn run build && yarn npm publish",
+    "release": "yarn run build && yarn publish",
     "lint": "tsc"
   },
   "devDependencies": {
