--- a/.github/workflows/publish_yarn.yml
+++ b/.github/workflows/publish_yarn.yml
@@ -21,6 +21,6 @@ jobs:
       - run: yarn build
         env:
             NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
-      - run: yarn npm publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
