--- a/.github/workflows/publish_yarn.yml
+++ b/.github/workflows/publish_yarn.yml
@@ -19,8 +19,6 @@ jobs:
           scope: '@bmackio'
       - run: yarn
       - run: yarn build
-        env:
-            NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
