--- a/.github/workflows/publish_yarn.yml
+++ b/.github/workflows/publish_yarn.yml
@@ -21,5 +21,4 @@ jobs:
       - run: yarn build
       - run: npm publish
         env:
-            NPM_TOKEN: ${{ secrets.GH_TOKEN }}
-            GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+            NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
