--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bmackio/pkg-yarn",
   "license": "MIT",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bmackio/pkg.git"
+    "url": "https://github.com/bmackio/pkg-yarn.git"
   },
   "publishConfig": {
     "@bmackio:registry": "https://npm.pkg.github.com"
